[gd_scene load_steps=3 format=3 uid="uid://c8f2h7x1j4k9p"]

[ext_resource type="Script" path="res://ui/mounts/MountUI.gd" id="1_mount_ui_script"]

[sub_resource type="Theme" id="theme_mount_ui"]

[node name="MountUI" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0
theme = SubResource("theme_mount_ui")
script = ExtResource("1_mount_ui_script")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="MountSelector" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
placeholder = "Selecionar Montaria"
fit_to_longest_item = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MountIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)
expand_mode = 1

[node name="MountName" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nenhuma Montaria"
autowrap_mode = 2

[node name="ToggleButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Invocar"

[node name="DashButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Dash"
disabled = true

[node name="StaminaContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StaminaLabel" type="Label" parent="VBoxContainer/StaminaContainer"]
layout_mode = 2
text = "Stamina da Montaria"
horizontal_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="VBoxContainer/StaminaContainer"]
layout_mode = 2
max_value = 100.0
show_percentage = true

[node name="SkillsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SkillsLabel" type="Label" parent="VBoxContainer/SkillsContainer"]
layout_mode = 2
text = "Skills da Montaria"
horizontal_alignment = 1

[node name="SkillButtons" type="HBoxContainer" parent="VBoxContainer/SkillsContainer"]
layout_mode = 2
alignment = 1